--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
 <body>
     <header>
     <div class="header-container">
-      <button onclick="window.location.href='index.php';" class="home-button">Home</button>
+      <button onclick="window.location.href='index.html';" class="home-button">Home</button>
       <h1 class="page-heading">TRAVEL GUIDE</h1>
     </div>
   </header>
