--- a/city.html
+++ b/city.html
@@ -254,7 +254,7 @@
 
 <body>
   <div class="header-container">
-    <button onclick="window.location.href='index.php';" class="home-button">Home</button>
+    <button onclick="window.location.href='index.html';" class="home-button">Home</button>
     <h1 class="page-heading">TRAVEL GUIDE</h1>
   </div>
 
